<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_saving"
        android:icon="@drawable/savingicon"
        android:title="@string/title_saving" />
    <item
        android:id="@+id/navigation_serving"
        android:icon="@drawable/servingicon"
        android:title="@string/title_serving" />

    <item
        android:id="@+id/navigation_sending"
        android:icon="@drawable/sendingicon"
        android:title="@string/title_sending" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/setting_50"
        android:title="@string/title_setting" />
</menu>
