<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingTop="10dp"
    android:paddingRight="5dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:background="@color/white"
                android:fontFamily="@font/sangsang"
                android:text="@string/home_ministry"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:autoSizeMaxTextSize="40sp"
                app:autoSizeMinTextSize="30sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="7dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/rounded_corner"
                android:contentDescription="@string/text_editable_upcoming"
                android:fontFamily="@font/sangsang"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:scrollbars="vertical"
                android:text="로딩중..."
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/parsingImage" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/familyBtn"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:background="@drawable/family"
                android:fontFamily="@font/sangsang"
                android:text="뉴송굿뉴스\n가정예배 안내지"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />



            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:divider="@color/white"
                android:gravity="center">

                <Button
                    android:id="@+id/sermonBtn"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@drawable/sermon_btn"
                    android:fontFamily="@font/sangsang"
                    android:onClick="onSermon"
                    android:text="@string/sermon"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/jooboBtn"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@drawable/book_btn"
                    android:fontFamily="@font/sangsang"
                    android:onClick="onJoobo"
                    android:text="@string/bulletin"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/homepageBtn"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@drawable/home_btn"
                    android:fontFamily="@font/sangsang"
                    android:onClick="onHompage"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/outreachBtn"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@drawable/outreach_btn"
                    android:fontFamily="@font/sangsang"
                    android:onClick="onOutreach"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/track_btn"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/writing"
                android:fontFamily="@font/sangsang"
                android:text="PATH 기록하기"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>